tests/custom/STARIS_2022/operation-type-errors/product-type-error-02/stderr.expected
Error:
    Parser error in file: product-type-error.essence Error is:
ValidatorError product-type-error.essence:2:23:
  |
2 | such that i = product([false, true, false])
  |                       ^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected:"Integer elements"
	Got: bool

